--- a/vignettes/Week2_Spatial_Data/Week2_vignette.Rmd
+++ b/vignettes/Week2_Spatial_Data/Week2_vignette.Rmd
@@ -49,7 +49,7 @@ require(GeNetIt)
 require(tmaptools) 
 require(SDMTools) # for landscape metrics
 require(tibble)
-getwd()           # check your working directory
+if(!dir.exists("./data")) dir.create("./data")
 ```
 
 ### d) List of tasks
@@ -69,8 +69,8 @@ First we piece together the coordinates from the @coords slot and the attribute 
 
 ```{r}
 data(ralu.site)
-write.csv(data.frame(ralu.site@coords, ralu.site@data), file="ralu.site.csv", quote=FALSE, row.names=FALSE)
-Sites <- read.csv("ralu.site.csv", header=TRUE)
+write.csv(data.frame(ralu.site@coords, ralu.site@data), file="./data/ralu.site.csv", quote=FALSE, row.names=FALSE)
+Sites <- read.csv("./data/ralu.site.csv", header=TRUE)
 as.tibble(Sites)
 ```
 
