--- a/vignettes/Week2_Spatial_Data/Week2_bonus_vignette.Rmd
+++ b/vignettes/Week2_Spatial_Data/Week2_bonus_vignette.Rmd
@@ -1,8 +1,13 @@
 ---
 title: "Week 2: Bonus Material"
-author: Helene Wagner
+author: "Helene Wagner"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+show_toc: true
+output:
+  knitr:::html_vignette:
+    toc: yes
+    fig_width: 4 
+    fig_height: 3.5
 vignette: >
   %\VignetteIndexEntry{Week 2: Bonus Material}
   %\VignetteEngine{knitr::rmarkdown}
@@ -49,7 +54,8 @@ If we use 'plot' on this 'sf' object, it will plot site attribute data in space!
 
 For an overview of 'pch' symbol numbers, and colors, check: http://vis.supstat.com/2013/04/plotting-symbols-and-color-palettes/
 
-```{r}
+```{r, fig.width=7, fig.height=6}
+par(mar=c(2,2,2,2))
 plot(Sites.sf, pch=16)
 ```
 
@@ -136,6 +142,9 @@ Map
 Additional layers are added to the map with '+ layer()': first we add a layer with the yellow filled circles at the sampling locations, then another layer with the black symbol outlines.
 
 ```{r fig.width=7}
+
+Sites.sp <- ralu.site
+
 Map + layer(sp.points(Sites.sp, pch=16, col="yellow", cex=1.1)) +
   layer(sp.points(Sites.sp, pch=1, col="black", cex=1.1))
 ```
