--- a/vignettes/Week4_Selection/Week4_vignette.Rmd
+++ b/vignettes/Week4_Selection/Week4_vignette.Rmd
@@ -20,9 +20,9 @@ vignette: >
 
 ### a) Goals 
 
-**Justification**:Natural selection acts on phenotypic variation that is genetically determined. As such, it can be difficult to get a complete picture about adaptation from scanning genomes using molecular markers. The reason is that genetic outliers, even if true positives, have little to no information present about what phenotype they affect and how this phenotype results in fitness differences. Moreover, it is debatable to scan genomes for the presence of outliers if you have yet to demonstrate that the populations being sampled are locally adapted.
+**Justification**: Natural selection acts on phenotypic variation that is genetically determined. As such, it can be difficult to get a complete picture about adaptation from scanning genomes using molecular markers. The reason is that genetic outliers, even if true positives, have little to no information present about what phenotype they affect and how this phenotype results in fitness differences. Moreover, it is debatable to scan genomes for the presence of outliers if you have yet to demonstrate that the populations being sampled are locally adapted.
 
-**Learning Objectives**:This lab was constructed to give you experience in working with basic quantitative and population genetic analyses useful to testing hypotheses about local adaptation. Phenotypic measurement is undergoing a revolution, so that familiarity with basic methods in quantitative genetics will serve you well in the future. By the end of the laboratory, you should be able to do the following:
+**Learning Objectives**: This lab was constructed to give you experience in working with basic quantitative and population genetic analyses useful to testing hypotheses about local adaptation. Phenotypic measurement is undergoing a revolution, so that familiarity with basic methods in quantitative genetics will serve you well in the future. By the end of the laboratory, you should be able to do the following:
 
 - Construct, fit, and assess linear mixed models (LMMs) to estimate genetic values for a phenotypic trait measured for families existing in a common garden.
 - Use LMMs to estimate heritability of a trait, its differentiation among populations, and its correlation with environment.
@@ -30,7 +30,8 @@ vignette: >
 In addition, this week's bonus material shows how to: 
 
 - Test whether or not phenotypic trait differentiation is statistically different than genetic differentiation at random molecular markers.
-- Perform and assess output from basic association analyses linking genetic variation with environmental variation. We will return to the topic of outlier locus detection and gene-environment associations later in the course (Week 11).
+- Test whether molecular markers behave neutrally (FST outliers)
+- Test association between trait and molecular markers
 
 ### b) Data set 
 
@@ -70,7 +71,8 @@ if(!dir.exists(paste0(here(),"/data"))) dir.create(paste0(here(),"/data"))
 ### a) Import phenytypic data 
 
 ```{r}
-phen <- read.delim(paste0(here(),"/data/WWP_phenotype_data.txt"), sep = "\t", header = T)
+phen <- read.delim(paste0(here(),"/data/WWP_phenotype_data.txt"), 
+                   sep = "\t", header = T)
 as.tibble(phen)
 ```
 
@@ -186,12 +188,17 @@ do the following using the mod_boot function in "supplemental_R_functions.R". It
 
 ```{r}
 h2_boot_out <- mod_boot(model = mod3, nboot = 1000)
-ci_95 <- quantile(h2_boot_out, probs = c(0.025, 0.50, 0.975)) ### this is a 95% ci.
+ci_95 <- quantile(h2_boot_out, probs = c(0.025, 0.50, 0.975)) ### 95% ci.
 ci_95
-boxplot(h2_boot_out, range=5); abline(h = h2, col = "red") ## the red line is our original h2 estimate   for   comparison   to   the   bootstrapdistribution.
+boxplot(h2_boot_out, range=5); abline(h = h2, col = "red") 
+## red line: original h2 estimate for comparison to bootstrap distribution.
 ```
 
-Interpret the confidence intervals 'ci_95' and boxplot with our original $h^2$ estimate for comparison to the bootstrap distribution. Do you think that $h^2$ is statistically different than zero? Is this consistent with the AIC results from Part 1? Is it meaningful that the red line is very similar to the mean (or median) of the bootstrap distribution? How would you change the code for a 99% confidence interval?
+Interpret the numerical 95% confidence intervals 'ci_95' and boxplot with our original $h^2$ estimate (red line: 0.399) for comparison to the bootstrap distribution. 
+
+- Do you think that $h^2$ is statistically different than zero? 
+- Is this consistent with the AIC results from Part 1? 
+- Is it meaningful that the red line is very similar to the mean (or median) of the bootstrap distribution? How would you change the code for a 99% confidence interval?
 
 ### b) Estimate trait differentiation
 
@@ -214,7 +221,7 @@ Now, we can again look at a confidence interval using parametric bootstrapping. 
 
 ```{r}
 qst_boot_out <- mod_boot_qst(model = mod3, nboot = 1000)
-ci_95_qst <- quantile(qst_boot_out, probs = c(0.025, 0.50, 0.975)) ### this is a 95% ci.
+ci_95_qst <- quantile(qst_boot_out, probs = c(0.025, 0.50, 0.975)) ### 95% ci.
 ci_95_qst
 boxplot(qst_boot_out); abline(h = qst, col = "red")
 ```
@@ -229,7 +236,8 @@ between genetic values of $δ^{13}C$ and environmental data.
 First,we need to load the environmental and geographical data.
 
 ```{r}
-env <- read.delim(paste0(here(),"/data/WWP_environmental_data.txt"), sep = "\t", header = T)
+env <- read.delim(paste0(here(),"/data/WWP_environmental_data.txt"), 
+                  sep = "\t", header = T)
 ```
 
 First,let’s standardize all the data. This means let’s subtract the mean and divide by the standard deviation for each geographical and environmental variable. Luckily, R has a function called scale() that will do this for us.
@@ -248,7 +256,8 @@ First, join the data:
 ```{r}
 phen_env <- cbind(mod3_all_eff[,1], env2[,c(3:11)])
 colnames(phen_env) <- c("d13c", colnames(env2)[3:11])
-mod1_env <- lm(d13c ~ longitude + latitude + elev + max_rad + tmax_july + tmin_jan + ann_ppt + gdd_aug + AWS050, data = phen_env)
+mod1_env <- lm(d13c ~ longitude + latitude + elev + max_rad + tmax_july + 
+                 tmin_jan + ann_ppt + gdd_aug + AWS050, data = phen_env)
 ```
 
 This model tells us the effect of all variables on $δ^{13}C$. Use 'summary' to get relevant statistics.
@@ -277,15 +286,10 @@ summary(mod3_env)
 
 This model gives the effect of geography independent of climate.
 
-We can now assess the impact of climate on the genetic values of $δ^{13}C$. Let’s start with model 1.
+We can now assess the impact of climate on the genetic values of $δ^{13}C$. Consider the output from the three models. 
 
-```{r}
-summary(mod1_env)
-```
+Start with model 'mod1_env'. Is this multiple regression model statistically significant? If so, why? Which variables provide the largest effects (use the column labeled 'Estimate', which is the partial regression coefficient)? 
 
-Is this multiple regression model statistically significant? If so, why? Which variables provide the largest effects (use the column labeled 'Estimate', which is the partial regression coefficient)? Do the same sort of inspection for 'mod2_env' and 'mod3_env'. What can you conclude?
+Do the same sort of inspection for 'mod2_env' and 'mod3_env'. What can you conclude?
 
-```{r}
-summary(mod2_env)
-summary(mod3_env)
-```
+
